fix beta writes, add additionall metrics and rework wording
